--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "nodemon": "^2.0.7",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.5.0"
@@ -24,6 +30,7 @@
     "express": "^4.17.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "styled-components": "^5.3.6",
     "underscore": "^1.12.1"
   }
 }
